hphp/test/slow/inout/bad-class.php.expectf
Fatal error: A name is expected here. in %s/test/slow/inout/bad-class.php on line 3